# dynein-cell-model

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: fetch_dependencies.cmake
examples/: CMakeLists.txt  convert_mask.cpp  convert_output.cpp  run_model.cpp  run_model_metrics.cpp  run_model_metrics_dep.cpp
examples/data/tug_of_war_1500_600/: AC.txt  I.txt  cell.txt  env.txt
run/2_5m-default/: config.yaml
run/2_5m-nuc/: config.yaml  metrics.csv
run/500k-default-snowy/: config.yaml  job.sbatch
run/data-dyn_f-fit/: config.yaml  metrics.csv
run/dcm_test_500k/: config.yaml  metrics.csv
run/dcm_test_500k_snowy/: metrics.csv
run/dcm_test_5m/: Report-2557307.out  Report-2557757.out  Report-2558025.out  Report-2558101.out  config.yaml  job.sbatch  metrics.csv
run/debugging/test/: config.yaml  metrics.xlsx
run/debugging/test2/: config.yaml
run/debugging/test5/: metrics.json
run/debugging/test6/: metrics.json
run/debugging/test7/: config.yaml
run/logs/: Report-2551938.out
run/old_model_2-5m/: config_Try12-9-2-2o.txt
run/signal_test/: .gitignore  config.yaml  metrics.csv
run/slurm/: dcm_test_5m_2025-12-05.sbatch
run/test3/: config.yaml
run/test7/: metrics.csv
scripts/: .gitignore  anim_cell.py  anim_cell_batched.py  convert_output.py  convert_output_old_to_new.py  fit_dyn_f.py  gen_fig1.py  gen_fig1_batched.py  profiling.ipynb  requirements.txt  test_fit_dyn_f.ipynb  visualize_nuc_evolution.py  visualize_nuc_evolution_batched.py
src/: CMakeLists.txt
src/cell_nuc/: CMakeLists.txt  cell_nuc.cpp
src/cell_nuc/include/cell_nuc/: cell_nuc.hpp
src/dynein_cell_model/: CMakeLists.txt  dynein_cell_model.cpp
src/dynein_cell_model/include/dynein_cell_model/: dynein_cell_model.hpp
src/metric_utils/: CMakeLists.txt  metric_utils.cpp
src/metric_utils/include/metric_utils/: metric_utils.hpp
src/test_utils/: CMakeLists.txt  test_utils.cpp
src/test_utils/include/test_utils/: test_utils.hpp
src/tqdm/: CMakeLists.txt  tqdm.hpp
src/tqdm-cpp/: CMakeLists.txt
tests/: CMakeLists.txt  test_diffuse_k0.cpp  test_dyn_field.cpp  test_model_compat.cpp  test_protrude.cpp  test_protrude_nuc.cpp  test_retract_nuc.cpp
